# replit-maintsovola

./: .replit  ai_insights.py  app.py  auth.py  data_analyzer.py  pyproject.toml  utils.py  visualization.py
.streamlit/: config.toml
static/: manifest.json  sw.js
